added new actions: maximize, minimize, full screen, new window, new private window, tab to window, close window, reload all, reload all caches

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -354,6 +354,90 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameReloadAllCaches" class="option"></p>
+            <p data-i18n="actionDescriptionReloadAllCaches" class="info"></p>
+          </div>
+          <form name="ReloadAllCaches" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameReloadAll" class="option"></p>
+            <p data-i18n="actionDescriptionReloadAll" class="info"></p>
+          </div>
+          <form name="ReloadAll" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+      </ul>
+      <ul class="optionList">
+        <li>
+          <div>
+            <p data-i18n="actionNameNewWindow" class="option"></p>
+            <p data-i18n="actionDescriptionNewWindow" class="info"></p>
+          </div>
+          <form name="NewWindow" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameNewPrivateWindow" class="option"></p>
+            <p data-i18n="actionDescriptionNewPrivateWindow" class="info"></p>
+          </div>
+          <form name="NewPrivateWindow" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameTabToWindow" class="option"></p>
+            <p data-i18n="actionDescriptionTabToWindow" class="info"></p>
+          </div>
+          <form name="TabToWindow" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameCloseWindow" class="option"></p>
+            <p data-i18n="actionDescriptionCloseWindow" class="info"></p>
+          </div>
+          <form name="CloseWindow" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+      </ul>
+      <ul class="optionList">
+        <li>
+          <div>
+            <p data-i18n="actionNameMinimize" class="option"></p>
+            <p data-i18n="actionDescriptionMinimize" class="info"></p>
+          </div>
+          <form name="Minimize" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameMaximize" class="option"></p>
+            <p data-i18n="actionDescriptionMaximize" class="info"></p>
+          </div>
+          <form name="Maximize" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
       </ul>
       <ul class="optionList">
         <li>
@@ -382,6 +466,16 @@
             <p data-i18n="actionDescriptionMute" class="info"></p>
           </div>
           <form name="Mute" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameFullscreen" class="option"></p>
+            <p data-i18n="actionDescriptionFullscreen" class="info"></p>
+          </div>
+          <form name="Fullscreen" class="gestureInput">
             <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
             <button name="record" type="button" class="recordButton"></button>
           </form>
