changed about links to open in a new tab

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -500,9 +500,9 @@
       </p>
       <hr>
       <ul class="sequence">
-        <li><a href="https://github.com/Robbendebiene/Gesturefy/issues" data-i18n="aboutLinkBug"></a></li>
-        <li><a href="https://github.com/Robbendebiene/Gesturefy" data-i18n="aboutLinkCode"></a></li>
-        <li><a href="https://addons.mozilla.org/firefox/addon/gesturefy/" data-i18n="aboutLinkAddon"></a></li>
+        <li><a target="_blank" href="https://github.com/Robbendebiene/Gesturefy/issues" data-i18n="aboutLinkBug"></a></li>
+        <li><a target="_blank" href="https://github.com/Robbendebiene/Gesturefy" data-i18n="aboutLinkCode"></a></li>
+        <li><a target="_blank" href="https://addons.mozilla.org/firefox/addon/gesturefy/" data-i18n="aboutLinkAddon"></a></li>
       </ul>
     </div>
   </div>
