added new action: "go up one level in the url hierarchy"

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -194,6 +194,16 @@
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameURLLevelUp" class="option"></p>
+            <p data-i18n="actionDescriptionURLLevelUp" class="info"></p>
+          </div>
+          <form name="URLLevelUp" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
       </ul>
       <ul class="optionList">
         <li>
@@ -356,20 +366,20 @@
         </li>
         <li>
           <div>
-            <p data-i18n="actionNameReloadAllCaches" class="option"></p>
-            <p data-i18n="actionDescriptionReloadAllCaches" class="info"></p>
+            <p data-i18n="actionNameReloadAll" class="option"></p>
+            <p data-i18n="actionDescriptionReloadAll" class="info"></p>
           </div>
-          <form name="ReloadAllCaches" class="gestureInput">
+          <form name="ReloadAll" class="gestureInput">
             <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
             <button name="record" type="button" class="recordButton"></button>
           </form>
         </li>
         <li>
           <div>
-            <p data-i18n="actionNameReloadAll" class="option"></p>
-            <p data-i18n="actionDescriptionReloadAll" class="info"></p>
+            <p data-i18n="actionNameReloadAllCaches" class="option"></p>
+            <p data-i18n="actionDescriptionReloadAllCaches" class="info"></p>
           </div>
-          <form name="ReloadAll" class="gestureInput">
+          <form name="ReloadAllCaches" class="gestureInput">
             <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
             <button name="record" type="button" class="recordButton"></button>
           </form>
