--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -386,6 +386,48 @@
         </li>
       </ul>
       <ul class="optionList">
+        <li class="noMargin">
+          <div>
+            <p data-i18n="actionNameLinkToForegroundTab" class="option"></p>
+            <p data-i18n="actionDescriptionLinkToForegroundTab" class="info"></p>
+          </div>
+          <form name="LinkToForegroundTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameLinkToBackgroundTab" class="option"></p>
+            <p data-i18n="actionDescriptionLinkToBackgroundTab" class="info"></p>
+          </div>
+          <form name="LinkToBackgroundTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameImageToTab" class="option"></p>
+            <p data-i18n="actionDescriptionImageToTab" class="info"></p>
+          </div>
+          <form name="ImageToTab" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+        <li>
+          <div>
+            <p data-i18n="actionNameSearchSelection" class="option"></p>
+            <p data-i18n="actionDescriptionSearchSelection" class="info"></p>
+          </div>
+          <form name="SearchSelection" class="gestureInput">
+            <input name="gesture" type="text" pattern="(\b(?:([UDRLudrl])(?!\2{1}))+\b)" placeholder="_">
+            <button name="record" type="button" class="recordButton"></button>
+          </form>
+        </li>
+      </ul>
+      <ul class="optionList">
         <li>
           <div>
             <p data-i18n="actionNameNewWindow" class="option"></p>
