--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -58,19 +58,6 @@
     <div id="Settings">
       <h1 data-i18n="navigationSettings"></h1>
       <ul class="optionList">
-        <li>
-          <div>
-            <p data-xi18n="settingNameDisplayGesture" class="option"></p>
-            <p data-xi18n="settingDescriptionDisplayGesture" class="info"></p>
-          </div>
-          <select name="textAlign" class="selectField">
-            <option value="1" data-i18n="settingNameDirectionsTextAlignLeft"></option>
-            <option value="2" data-i18n="settingNameDirectionsTextAlignRight"></option>
-            <option value="4" data-i18n="settingNameDirectionsTextAlignCenter"></option>
-          </select>
-        </li>
-      </ul>
-      <ul class="optionList">
         <li class="noMargin">
           <div>
             <p data-i18n="settingNameDisplayGesture" class="option"></p>
@@ -561,7 +548,7 @@
       <hr>
       <p class="text">
         <strong data-i18n="aboutContributors"></strong>
-        <span data-manifest="author">
+        <a href="https://github.com/Robbendebiene" data-manifest="author"></a>, <a href="https://github.com/stmr">stmr</a>
       </p>
       <hr>
       <ul class="sequence">
