--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -548,7 +548,9 @@
       <hr>
       <p class="text">
         <strong data-i18n="aboutContributors"></strong>
-        <a href="https://github.com/Robbendebiene" data-manifest="author"></a>, <a href="https://github.com/stmr">stmr</a>
+        <a href="https://github.com/Robbendebiene" data-manifest="author"></a>,
+        <a href="https://github.com/stmr">stmr</a>,
+        <a href="https://github.com/yfdyh000">YFdyh000</a>
       </p>
       <hr>
       <ul class="sequence">
