added contributor to info page

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -550,7 +550,8 @@
         <strong data-i18n="aboutContributors"></strong>
         <a href="https://github.com/Robbendebiene" data-manifest="author"></a>,
         <a href="https://github.com/stmr">stmr</a>,
-        <a href="https://github.com/yfdyh000">YFdyh000</a>
+        <a href="https://github.com/yfdyh000">YFdyh000</a>,
+        <a href="https://github.com/uegajde">uegajde</a>  
       </p>
       <hr>
       <ul class="sequence">
