added rocker gesture

--- a/src/ui/html/options.html
+++ b/src/ui/html/options.html
@@ -625,32 +625,22 @@
       <ul class="optionList">
         <li>
           <div>
-            <p data-i18n="settingNameDisplayAction" class="option"></p>
-            <p data-i18n="settingDescriptionDisplayAction" class="info"></p>
+            <p data-i18n="extraNameRockerActive" class="option"></p>
+            <p data-i18n="extraDescriptionRockerActive" class="info"></p>
           </div>
-          <input data-hierarchy="Gesture.Action" name="display" id="SettingDisplayAction" class="toggleButton" type="checkbox"><label for="SettingDisplayAction"></label>
+          <input data-hierarchy="Rocker" name="active" id="ExtrasActivateRocker" class="toggleButton" type="checkbox"><label for="ExtrasActivateRocker"></label>
         </li>
         <li class="noMargin">
           <div>
-            <p data-i18n="settingNameMouseButton" class="option"></p>
-            <p data-i18n="settingDescriptionMouseButton" class="info"></p>
+            <p data-i18n="extraNameRockerLeftMouseClick" class="option"></p>
           </div>
-          <select data-hierarchy="Gesture" name="mouseButton" class="selectField">
-            <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
-            <option value="2" data-i18n="settingNameMouseButtonRight"></option>
-            <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
-          </select>
+          <select data-hierarchy="Rocker" name="leftMouseClick" class="selectField"></select>
         </li>
         <li>
           <div>
-            <p data-i18n="settingNameMouseButton" class="option"></p>
-            <p data-i18n="settingDescriptionMouseButton" class="info"></p>
+            <p data-i18n="extraNameRockerRightMouseClick" class="option"></p>
           </div>
-          <select data-hierarchy="Gesture" name="mouseButton" class="selectField">
-            <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
-            <option value="2" data-i18n="settingNameMouseButtonRight"></option>
-            <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
-          </select>
+          <select data-hierarchy="Rocker" name="rightMouseClick" class="selectField"></select>
         </li>
       </ul>
     </div>
